// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`обработка изменения инпута должен вызвать onChange на изменение 1`] = `
Array [
  Object {
    "event": Object {
      "currentTarget": Object {
        "value": "1234",
      },
    },
    "name": "test",
    "value": "1234",
  },
]
`;

exports[`параметры атрибуты и пропсы для рут элемента и инпута 1`] = `
<div
  className="TextField"
  id="kek"
  title="Мы избалованы потому, что не ценим те вещи, что у нас есть. (с) Офис"
>
  <input
    className="TextField__input InputTest"
    id="Mag"
    onChange={[Function]}
    placeholder="Привет!"
    type="password"
  />
</div>
`;

exports[`параметры дефолтные атрибуты и пропсы 1`] = `
<div
  className="TextField"
>
  <input
    className="TextField__input"
    onChange={[Function]}
  />
</div>
`;
